--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 		<meta chartset="utf-8"/>
 		<title>AidData Activity Coding Challenge Homepage</title>
 		<link rel="stylesheet" type="text/css" href="css\bootstrap.min.css"/>
-		<link rel="stylesheet" type="text/css" href="css\style.css"/>	
+		<link rel="stylesheet" type="text/css" href="css\style.css"/>
 	</head>
 	<body>
 
@@ -46,25 +46,35 @@
 
 			var results = [
 				{
-					name:'Foo',
-					repoLink:'#',
+					name:'AidData RoboCoder',
+					repoLink:'https://github.com/davidrs/robocoder/tree/master/ActivityCoder',
 					authors: [],
 					accuracy: {
-						one:34,
-						two:45,
-						three:12
-					}, 
-					verified:false
+						wbd:14.266,
+						afdb:21.776,
+						edu:9.318,
+						health:15.914,
+						agri:7.635,
+						short:0.098 ,
+						med:6.291 ,
+						long:20.670,
+					},
+					verified:true
 				},
 				{
-					name:'Bar',
+					name:'Yours...',
 					authors: [],
 					repoLink:'#',
 					accuracy: {
-						one:12,
-						two:78,
-						three:2
-					}, 
+						wbd:1,
+						afdb:1,
+						edu:1,
+						health:1,
+						agri:1,
+						short:1 ,
+						med:1 ,
+						long:1,
+					},
 					verified:false
 				}
 			]
