--- a/index.html
+++ b/index.html
@@ -39,30 +39,41 @@
 
 			//========= add your team's results here =========
 
-			var results = [
-				{
-					name:'Foo',
-					repoLink:'#',
-					authors: [],
-					accuracy: {
-						one:34,
-						two:45,
-						three:12
-					}, 
-					verified:false
-				},
-				{
-					name:'Bar',
-					authors: [],
-					repoLink:'#',
-					accuracy: {
-						one:12,
-						two:78,
-						three:2
-					}, 
-					verified:false
-				}
-			]
+		  var results = [
+                                {
+                                        name:'AidData RoboCoder',
+                                        repoLink:'https://github.com/davidrs/robocoder/tree/master/ActivityCoder',
+                                        authors: [],
+                                        accuracy: {
+                                                wbd:14.266,
+                                                afdb:21.776,
+                                                edu:9.318,
+                                                health:15.914,
+                                                agri:7.635,
+                                                short:0.098 ,
+                                                med:6.291 ,
+                                                long:20.670,
+                                        },
+                                        verified:true
+                                },
+                                {
+                                        name:'Yours...',
+                                        authors: [],
+                                        repoLink:'#',
+                                        accuracy: {
+                                                wbd:1,
+                                                afdb:1,
+                                                edu:1,
+                                                health:1,
+                                                agri:1,
+                                                short:1 ,
+                                                med:1 ,
+                                                long:1,
+                                        },
+                                        verified:false
+                                }
+                        ]
+
 
 			//=================================================
 
