--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
 			</div>
 			<div class="row-fluid">
 				<h4>Overview</h4>
-				<p>Description and link to problem sets here</p>
+				<p>International development projects are usually tagged to a specific sector, such as "Health" or "Water and Sanitation". However, for real-world planning and coordination, much more detail is needed. Over the past 5 years, AidData.org has worked to do detailed "activity coding" on development projects - taking them from "Health" to "Malaria control" or "Medical Insurance Programs" - based on written project descriptions. 
+				The challenge is now for developers with skills in natural language processing, machine learning, and/or algorithm design to automate some of this coding.</p>
+				<p>Below you will find past submission and their scores. Feel free to browse, borrow, and remix previous entries (barring any license restrictions).</p>
 			</div>
 			<div class="row-fluid">
 				<h4>Results</h4>
