--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 		<meta chartset="utf-8"/>
 		<title>AidData Activity Coding Challenge Homepage</title>
 		<link rel="stylesheet" type="text/css" href="css\bootstrap.min.css"/>
-		<link rel="stylesheet" type="text/css" href="css\style.css"/>
+		<link rel="stylesheet" type="text/css" href="css\style.css"/>	
 	</head>
 	<body>
 
@@ -13,7 +13,11 @@
 			</div>
 			<div class="row-fluid">
 				<h4>Overview</h4>
-				<p>Description and link to problem sets here</p>
+				<p>International development projects are usually tagged to a specific sector, such as "Health" or "Water and Sanitation". However, for real-world planning and coordination, much more detail is needed. Over the past 5 years, AidData.org has worked to do detailed "activity coding" on development projects - taking them from "Health" to "Malaria control" or "Medical Insurance Programs" - based on written project descriptions. 
+				The challenge is now for developers with skills in natural language processing, machine learning, and/or algorithm design to automate some of this coding.</p>
+				<p>Below you will find past submission and their scores. Feel free to browse, borrow, and remix previous entries (barring any license restrictions).</p>
+				<h4>Submit</h4>
+				<p>Submit your entry by editing the index.html with a link to your GitHub project, and your final scores.</p>
 			</div>
 			<div class="row-fluid">
 				<h4>Results</h4>
@@ -44,40 +48,41 @@
 
 			//========= add your team's results here =========
 
-			var results = [
-				{
-					name:'AidData RoboCoder',
-					repoLink:'https://github.com/davidrs/robocoder/tree/master/ActivityCoder',
-					authors: [],
-					accuracy: {
-						wbd:14.266,
-						afdb:21.776,
-						edu:9.318,
-						health:15.914,
-						agri:7.635,
-						short:0.098 ,
-						med:6.291 ,
-						long:20.670,
-					},
-					verified:true
-				},
-				{
-					name:'Yours...',
-					authors: [],
-					repoLink:'#',
-					accuracy: {
-						wbd:1,
-						afdb:1,
-						edu:1,
-						health:1,
-						agri:1,
-						short:1 ,
-						med:1 ,
-						long:1,
-					},
-					verified:false
-				}
-			]
+		  var results = [
+                                {
+                                        name:'AidData RoboCoder',
+                                        repoLink:'https://github.com/davidrs/robocoder/tree/master/ActivityCoder',
+                                        authors: [],
+                                        accuracy: {
+                                                wbd:14.27,
+                                                afdb:21.78,
+                                                edu:9.32,
+                                                health:15.91,
+                                                agri:7.64,
+                                                short:0.10 ,
+                                                med:6.29 ,
+                                                long:20.67,
+                                        },
+                                        verified:true
+                                },
+                                {
+                                        name:'Yours...',
+                                        authors: [],
+                                        repoLink:'#',
+                                        accuracy: {
+                                                wbd:1,
+                                                afdb:1,
+                                                edu:1,
+                                                health:1,
+                                                agri:1,
+                                                short:1 ,
+                                                med:1 ,
+                                                long:1,
+                                        },
+                                        verified:false
+                                }
+                        ]
+
 
 			//=================================================
 
