Add correct scores for current best performing algoirthm, amd new formula.

--- a/index.html
+++ b/index.html
@@ -51,17 +51,17 @@
 		  var results = [
                                 {
                                         name:'AidData RoboCoder',
-                                        repoLink:'https://github.com/davidrs/robocoder/tree/master/ActivityCoder',
+                                        repoLink:'https://github.com/AidData/robocoder/releases/tag/BestPerformance',
                                         authors: [],
                                         accuracy: {
-                                                wbd:14.27,
-                                                afdb:21.78,
-                                                edu:9.32,
-                                                health:15.91,
-                                                agri:7.64,
-                                                short:0.10 ,
-                                                med:6.29 ,
-                                                long:20.67,
+                                                wbd:21.28,
+                                                afdb:11.8,
+                                                edu:27,
+                                                health:8,
+                                                agri:0, //actually gets 0, just returns same 2 codes whole time.
+                                                short:14 ,
+                                                med:11.5 ,
+                                                long:11,
                                         },
                                         verified:true
                                 },
